# Alpha-Decay-Simulation-with-Geant4

./: CMakeLists.txt  README.md
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: run.mac  vis.mac
src/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp  main.cpp
